# Unzipper

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Main.cpp  README.md  TestTask.txt
Submodules/: CMakeLists.txt
Unzipper/: CMakeLists.txt  ExecutableLauncher.cpp  ExecutableLauncher.h  Main.cpp  MainWindow.cpp  MainWindow.h  Unzipper.cpp  Unzipper.h  resources.qrc
Zipper/: CMakeLists.txt  Main.cpp
